packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/correct/pkgbase_with_any_arch.srcinfo
pkgbase = any-arch
	pkgver = 0.1.0
	pkgrel = 1
	arch = any

pkgname = any-arch
