packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/parse_errors/invalid_property_delimiter.srcinfo
pkgbase = test
	# Delimiter should have spaces.
	pkgver=1.0.0
	pkgrel = 1
